axum-macros/tests/typed_path/fail/catch_all_not_whole_segment.rs
use axum_macros::TypedPath;
use serde::Deserialize;

#[derive(TypedPath, Deserialize)]
#[typed_path("/files/{*rest}.txt")]
struct MyPath {
    rest: String,
}

fn main() {}
